2006-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* configure.ac:
	  Require at least GLib-2.6. Give more extensive error message if
	  GLib development files are not found.

	* src/gnet-private.h:
	* src/udp.c: (gnet_udp_socket_new_full), (gnet_udp_socket_delete),
	(gnet_udp_socket_ref), (gnet_udp_socket_unref),
	(gnet_udp_socket_get_io_channel),
	(gnet_udp_socket_get_local_inetaddr), (gnet_udp_socket_send),
	(gnet_udp_socket_receive), (gnet_udp_socket_has_packet),
	(gnet_udp_socket_get_ttl), (gnet_udp_socket_set_ttl):
	  Move private struct over to where it belong (udp.c); guard all
	  public functions properly against bad input; try harder to guard
	  against bad input by adding a type cookie to the beginning of
	  our struct; do refcounting atomically for GUdpSocket.

2006-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/gnet-private.c: (gnet_private_io_channel_new):
	  No need to special-case for GLib-2.0 any more, since we don't
	  support 1.2 any longer.
	  
2006-09-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/uri.c: (gnet_uri_new), (gnet_uri_get_string):
	* tests/uri_test.c: (main):
	  Add support for absolute file:// URIs and add two simple test cases.
	  Not entirely convinced about the required fix to _get_string(), but
	  it doesn't seem to break any of the tests, so it can't be too bad
	  even if it's not entirely correct. Fixes bug #317456. Based
	  on patch by Milosz Derezynski <internalerror at gmail com>

2006-09-10  Tim-Philipp Müller  <tim at centricular dot net>

	Patch by: Dov Grobgeld <dov dot grobgeld at gmail dot com>

	* configure.ac:
	* examples/Makefile.am:
	* examples/xmlrpc/.cvsignore:
	* examples/xmlrpc/Makefile.am:
	* examples/xmlrpc/README:
	* examples/xmlrpc/test-xmlrpc-client.c:
	* examples/xmlrpc/test-xmlrpc-server.c:
	* examples/xmlrpc/xmlrpc-client.c:
	* examples/xmlrpc/xmlrpc-server.c:
	* examples/xmlrpc/xmlrpc.h:
	  Add Dov Grobgeld's XMLRPC code to the examples for posteriority.
