@@ -1,3 +1,10 @@
+2006-09-12  Tim-Philipp Müller  <tim at centricular dot net>
+
+	* src/gnet-private.h:
+	* src/unix.c:
+	  Move another private structure that is only used locally
+	  to where it belongs.
+
 2006-09-11  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* configure.ac:
@@ -11,7 +18,7 @@
 	(gnet_udp_socket_get_local_inetaddr), (gnet_udp_socket_send),
 	(gnet_udp_socket_receive), (gnet_udp_socket_has_packet),
 	(gnet_udp_socket_get_ttl), (gnet_udp_socket_set_ttl):
-	  Move private struct over to where it belong (udp.c); guard all
+	  Move private struct over to where it belongs (udp.c); guard all
 	  public functions properly against bad input; try harder to guard
 	  against bad input by adding a type cookie to the beginning of
 	  our struct; do refcounting atomically for GUdpSocket.
